k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: datahub
      websocket: websocket01
  template:
    metadata:
      labels:
        component: datahub
        websocket: websocket01
    spec:
      containers:
        - name: websocket01
          image: docker/datahub-websocket-frontend-sample:2.0.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
              ephemeral-storage: 64Mi
            requests:
              cpu: 60m
              memory: 64Mi
