k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-frontend
spec:
  type: ClusterIP
  selector:
    component: datahub
    websocket: websocket01
  ports:
    - port: 3000
      targetPort: 3000
