k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: websocket-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: websocket-frontend.datahub.eks008.en.internal
      http:
        paths:
          - path: /
            backend:
              serviceName: websocket-frontend
              servicePort: 3000
